gcc/testsuite/rust/rustc/ui/inline-const/expr-with-block-err_dg.rs
fn main() {
    const { 2 } - const { 1 };
// { dg-error ".E0308." "" { target *-*-* } .-1 }
}

